<resources>
    <string name="app_name">NutritionTracker</string>
    <string name="calorie">0 / 2000 kcal</string>
    <string name="protein">Fehérje: 0g</string>
    <string name="carbs">Szénhidrát: 0g</string>
    <string name="fat">Zsír: 0g</string>
    <string name="mainPage">Kezdőlap</string>
    <string name="addFood">Étel hozzáadása</string>
    <string name="profil">Profil</string>
    <string name="food_name">Étel neve</string>
    <string name="save">Mentés</string>
    <string name="foods">Ételek</string>
    <string name="name">Név</string>
    <string name="email">Email</string>
    <string name="daily_calorie">Napi kalóriacél</string>
    <string name="logout">Kijelentkezés</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="nincs_fiok">Még nincs fiókod? Regisztrálj!</string>
    <string name="register">Register</string>
    <string name="van_mar_fiok">Already have an account? Login</string>
    <string name="set_calorie">Kalóriacél beállítása</string>
    <string name="todo">TODO</string>
    <string name="kaloria_tullepes">Túllépted a napi kalóriacélt!</string>
    <string name="add_new_food">Add new food</string>
    <string name="_200_kcal">200 kcal</string>
    <string name="p_20g_c_30g_f_10g">P: 20g | C: 30g | F: 10g</string>
    <string name="edit_food">Edit food</string>
    <string name="delete_food">Delete food</string>
    <string name="add">Add</string>
    <string name="calories_kcal">Calories (kcal)</string>
    <string name="protein_g">Protein (g)</string>
    <string name="carbs_g">Carbs (g)</string>
    <string name="fats_g">Fats (g)</string>
    <string name="profilk_p">Profilkép</string>
    <string name="profilk_p_kiv_laszt_sa">Profilkép kiválasztása</string>
    <string name="statisztika">Statisztika</string>
    <string name="tel_statisztik_k">Étel Statisztikák</string>
    <string name="top_10_magas_kal_riatartalm_tel">TOP 10 magas kalóriatartalmú étel</string>
    <string name="top_10_magas_feh_rjetartalm_tel">TOP 10 magas fehérjetartalmú étel</string>
    <string name="top_10_alacsony_zs_rtartalm_tel">TOP 10 alacsony zsírtartalmú étel</string>
    <string name="tel_neve">Étel neve</string>
    <string name="_500_kcal">500 kcal</string>
    <string name="_20g_feh_rje">20g fehérje</string>
    <string name="_30g_sz_nhidr_t">30g szénhidrát</string>
    <string name="_10g_zs_r">10g zsír</string>
    <string name="vissza" />
</resources>