<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNav">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvProfileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvDailyCalorieGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_calorie"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etDailyCalorieGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/set_calorie"
                android:inputType="number"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/btnSaveProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_calorie"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"/>

</RelativeLayout>
