<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <ProgressBar
        android:id="@+id/progressCalories"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/tvCalories"
        android:layout_marginTop="10dp"
        android:progress="50"
        android:max="100"
        android:layout_marginHorizontal="20dp" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kaloria_tullepes"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/progressCalories"/>

    <LinearLayout
        android:id="@+id/layoutMacros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWarning"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tvProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tvCarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbs"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tvFats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewConsumedFoods"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/btnAddFood"
        android:layout_below="@id/layoutMacros"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        tools:listitem="@layout/item_consumed_food" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomNav"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="179dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/teal_700" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu"/>

</RelativeLayout>